	
1.0.0:
	-> Deleting versions optimized
	-> Session expired check during recent doc load
	-> Change reading order optimized
	-> Refine reading order circles appearance
	-> Export tables into Docx and Excel (in excel tables only)
	-> Export as a rest service
	-> reading order behavior during region split
	-> show download link after server export to the user
	-> supplied tag handling for docx export
	-> option to show filename in thumbs manager
	-> included tag search
	-> jump to version 1.0.0 
		-> third number is for differentiating between snapshot versions for a specific release (i.e. 1.0.1-SNAPSHOT is the first snapshot for release 1.0)
		-> second number of for urgent bugfixes
		-> first number if the main release version
		
1.1.0:
	-> bugfix: NPE when empty description in HTR models
	-> bugfix: when replacing image on server, returned TrpPage could not be unmarshalled due to java.sql.Timestamp fields
	-> bugfix: update of page when tool job finished
	-> support for 'Supplementary Characters' (5 digits) in virtual keyboard
	-> bugfix: merge regions and lines is working again
	-> bugfix: seldom PDF export bug fixed
	-> included new la methods: ncsr (new), cvl & citlab (restricted accesss)
	-> Upload from private FTP: validation of directories now happens separately instead of during read process on server 
	-> new 'div' tag
	
1.1.1:
	-> determine CITlabLaJob availability in UI via server call
	-> remove "new" (which was actually the old one) and buggy NCSR LA method

1.1.2
	-> private FTP upload bugfix
	-> bugfix: preserve reading order during export
	
1.1.3
	-> remove "analyze structure" from tools
	-> add "other tools" area and integrate polygon to baselines as first such tool
	-> redesigned HtrTrainingDialog
	-> more details on HTR models in TextRecognitionConfigDialog
	-> context menu for doclist widget (delete, duplicate)
	-> deafult sorting for docs in doclist is doc-id descending
	
	